--- a/master.css
+++ b/master.css
@@ -29,6 +29,8 @@
             --blue:hsl(198, 60%, 50%);
         /*Netural color*/
             --white:hsl(0, 0%, 100%);
+            --white-dark:hsl(0, 0%, 90%);
+            --white-gray:hsl(0, 0%, 80%);
     /*End of color scheme*/
 }
 
@@ -53,11 +55,11 @@ body {
 
     color:#fff;
     color:var(--white);
+    font-family: 'Open Sans', sans-serif;
 }
 
-
-h1,h2,h3,
-h4,h5,h6 {
+h1, h2, h3,
+h4, h5, h6 {
     font-family: 'Raleway', sans-serif;
 }
 
@@ -66,17 +68,461 @@ img {
     max-width:100%;
 }
 
-ul { list-style:none; }
+ul { 
+    list-style:none;
+ }
     
-a { color:currentColor; }
+a { 
+    color:currentColor;
+    text-decoration:none;
+ }
     
-
-
-
-/*start of website styling*/
-
+P {
+    color:var(--white-dark);
+}
 
 
 /*start of navbar*/
+.navbar {
+    display:flex;
+    justify-content: space-between;
+    align-items:center;
+    
+    width:100%;
+    height:auto;
+    margin:1.5rem 0 3rem 0;
+    font-family: 'Raleway', sans-serif;
+}
 
+.navbar-logo {
+    width:calc(60px + 4vw);
+    height: auto;
+    margin-left:1rem;
+}
+
+.navbar__items {
+    display:flex;
+    flex-direction: row;
+    color:var(--white-gray);  
+}
+
+.navbar__item {
+    padding:0 0.75rem;
+} 
+
+.navbar__item:first-of-type {
+    padding-left:0;
+} 
+
+.navbar__item:last-of-type {
+    padding-right:0;
+    margin-right:1rem;
+} 
 /*end of navbar*/
+
+
+
+/*start of main*/
+.main-content {
+    width:85%;
+    margin:0 auto;
+
+    text-align:center;
+}
+
+.main-content--h1 {
+    font-size:1.75rem;
+}
+
+.main-content--h1 span {
+    display:inline;
+    /*display:block; for desktop displays*/
+}
+
+.main-content--text {
+    color:var(--white-gray);
+    font-size:1rem;
+    width:36ch;
+    margin:0 auto 2rem auto;
+    line-height:1.6;
+}
+/*end of of main*/
+
+
+/*start of sales-content*/
+.sales-content {
+    margin: 9rem 0;
+}
+
+.sale-content__item {
+    text-align:center;
+}
+
+.sales-content__item--heading {
+    font-size: 1.25rem;
+}
+
+.sales-content__item--text {
+    margin:-0.5rem auto 0 auto;
+    width:40ch;
+}
+
+.sales-content__img {
+    margin:6rem auto 2rem auto;
+    width:50px;
+    height:auto;
+}
+/*end of sales-content*/
+
+
+/*start of call-to-action-2*/
+.call-to-action-2 {
+    margin-bottom:12rem;
+}
+
+.call-to-action-2__img {
+    width:85%;
+    margin:0 auto;
+}
+
+.call-to-action-2__content {
+    width:85%;
+    margin:0 auto;
+}
+
+.call-to-action-2__content__header {
+    font-size: 1.25rem;
+}
+
+.call-to-action-2__content__text span {
+    display:block;
+    margin-top:1.5rem;
+}
+
+.call-to-action-2__content__link {
+    margin-top:1.5rem;
+    position: relative;
+    color:cyan;
+    color:var(--cyan); 
+}
+
+.call-to-action-2__content__link {
+    cursor: pointer;
+}
+
+/*text underline*/
+.call-to-action-2__content__link::before {
+    content:'';
+    position: absolute;
+    width:120%;
+    height:1px;
+    left:0;
+    bottom:-30%;
+    background-color:cyan;
+    background-color:var(--cyan); 
+    
+    transform:scaleX(1);
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
+}
+/*text underline hover animation*/
+/* .call-to-action-2__content__link:hover::before {
+    
+    transform:scaleX(1);
+    transform-origin: bottom left;
+    transition: transform 0.25s ease;
+} */
+
+/*arrow icon*/
+.call-to-action-2__content__link::after {
+    content:'';
+    position: absolute;
+    width:120%;
+    height:100%;
+    left:0;
+    top:0;
+    background-image:url("fylo-dark-landing-page-master/images/icon-arrow.svg");
+    background-repeat: no-repeat;
+    background-position: center right;
+}
+/*end of call-to-action-2*/
+
+
+/*start of testimonials*/
+.testimonials {
+    margin-bottom:12rem;
+    position: relative;
+}
+
+.testimonial-container {
+    position: relative;
+    width:80%;
+    margin:0 auto;
+    background-color:var(--dark-blue-testimonials-1);
+    border-radius:5px;
+    
+    z-index:200;
+}
+
+.testimonial {
+    position: relative;
+    margin:2rem auto;
+    width:80%;
+    background-color:inherit;
+    border-radius:inherit;
+    padding:1.5rem 0;
+
+    z-index:inherit;
+}
+
+.testimonial-1__overlay-quote {
+    position: absolute;
+    width:80%;
+    height:5%;
+    top:-17px;
+    left:60%;
+    transform:translateX(-60%);
+    background-image: url("fylo-dark-landing-page-master/images/bg-quotes.png");
+    background-repeat: no-repeat;
+    background-size: 1.5rem;
+
+    z-index:100;
+}
+
+.testimonial__text {
+    font-size:0.85rem;
+    line-height:1.8;
+    color:var(--white-gray);
+}
+
+.testimonial__profile {
+    display:flex;
+    align-items: center;
+}
+
+.testimonial__profile__user--img {
+    width:30px;
+    height:auto;
+    border-radius:50%;
+    margin-right:0.75rem;
+}
+.testimonial__profile__words__user--name {
+    font-size:0.75rem;
+    letter-spacing:2px;
+    margin-bottom:-7px;
+}
+
+.testimonial__profile__words__user--job {
+    font-size:0.65rem;
+    letter-spacing:1.25px;
+    color:var(--white-gray);
+}
+/*end of testimonials*/
+
+
+/*start of .get-access*/
+.get-access {
+    background-color:var(--dark-blue-various-1);
+    width:90%;
+    margin:0 auto 4rem auto;
+    padding:2rem 0;
+    border-radius:5px;
+    text-align:center; 
+
+    box-shadow: 0px 5px 35px #111;
+}
+
+.get-access__text {
+    width:34ch;
+    margin:0 auto 2rem auto;
+    color:var(--white-gray);
+}
+
+.get-access__form {
+    width:80%;
+    margin:0 auto;
+}
+
+.get-access__form__text-input {
+    border:none;
+    border-radius:50px;
+    width:19rem;
+    height:3.5rem;
+    margin-bottom:1.5rem;
+}
+
+.get-access__form__text-input::placeholder {
+    color:hsl(0, 0%, 65%);
+    font-size:0.9rem;
+    padding-left:2rem;
+}
+/*end of .get-access*/
+
+
+/*start of footer*/
+
+.footer {
+    color:var(--white-dark);
+    padding-bottom:3rem; 
+}
+
+
+.footer-logo-container {
+    display:flex;
+    justify-content: flex-start;
+    margin-bottom:2rem;
+}
+
+.footer-fylo__logo {
+    margin-left:6vw;
+}
+
+.footer__info-text {
+    position: relative;
+    width:36ch;
+}
+.footer__info-text::before {
+    background-image: url("fylo-dark-landing-page-master/images/icon-location.svg");
+}
+
+.footer__info-text::before,
+.footer__info__contact__phone::before,
+.footer__info__contact__email::before {
+    content:'';
+    width:25px;
+    height:100%;
+    position: absolute;
+    left:-10%;
+    background-repeat: no-repeat;
+}
+
+/*contact info*/
+.footer__info-text,
+.footer__info__contact  {
+    margin-left:14vw;
+}
+
+.footer__info__contact {
+    display:flex;
+    flex-direction: column;
+    position: relative;
+}
+
+.footer__info__contact__phone {
+    position: relative;
+    width:20rem;
+    margin-bottom:1rem;
+}
+
+.footer__info__contact__phone::before {
+    background-image: url("fylo-dark-landing-page-master/images/icon-phone.svg");
+    background-position: left center;
+    background-size:0.85rem;
+}
+
+.footer__info__contact__email {
+    position: relative;
+    width:20rem;
+}
+
+.footer__info__contact__email::before {
+    background-image: url("fylo-dark-landing-page-master/images/icon-email.svg");
+    background-position: left center;
+    background-size:1.15rem;
+}
+
+/*about us, contact us, terms,ect...*/
+.footer__nav {
+    margin-top:4rem;
+    margin-bottom:4rem;
+}
+
+.footer__nav ul {
+    padding:0;
+    margin-left:8vw;
+}
+
+.footer__nav-item { 
+    padding:0.5rem 0;
+}
+
+.footer__nav-items-2 { 
+    margin-top:2rem;
+}
+
+/*social links (facebook, twitter, ect..)*/
+.social-links {
+    display:flex;
+    justify-content: center;
+}
+
+.social-link {
+    border-radius:50%;
+    border:1px solid white;
+    padding:5px;
+    margin:0 5px;
+    transition:transform 0.5s ease;
+}
+/*spin / hover effect on social media links*/
+/* .social-link:hover {
+    filter:brightness(1.15);
+    transform: rotate(360deg) scale(1.3);
+    transition:transform 0.5s ease;
+} */
+
+
+.social-link__img {
+    width:15px;
+    height:15px;
+}
+/*end of footer*/
+
+/*utilites*/
+    /*buttons*/
+    .get-started--btn {
+        width:19rem;
+        height:3.5rem;
+        border:none;
+        border-radius:50px;
+        background-image:linear-gradient(145deg,var(--cyan), var(--blue));
+        color:white;
+        color:var(--white);
+        font-weight:700;
+    }
+
+    .get-started--btn:hover {
+        cursor: pointer;
+        filter:brightness(0.90);
+    }
+    /*end of buttons*/
+/*end of utilites*/
+
+
+
+
+
+
+
+
+
+
+/*start of media queries*/
+/*mobile first approach has been done on this website*/
+
+/*tablet view : 768px*/
+@media(min-width:768px) {
+
+}
+
+
+
+
+
+
+
+
+
+/*Laptop view : 1024px*/
+@media(min-width:1024px) {
+
+}
