--- a/master.css
+++ b/master.css
@@ -121,13 +121,14 @@ P {
 /*end of navbar*/
 
 
-
 /*start of main*/
 .main-content {
     width:85%;
     margin:0 auto;
-
+    position: relative;
     text-align:center;
+
+    overflow:none;
 }
 
 .main-content--h1 {
@@ -136,7 +137,6 @@ P {
 
 .main-content--h1 span {
     display:inline;
-    /*display:block; for desktop displays*/
 }
 
 .main-content--text {
@@ -206,7 +206,7 @@ P {
     color:var(--cyan); 
 }
 
-.call-to-action-2__content__link {
+.call-to-action-2__content__link:hover {
     cursor: pointer;
 }
 
@@ -360,7 +360,6 @@ P {
 
 
 /*start of footer*/
-
 .footer {
     color:var(--white-dark);
     padding-bottom:3rem; 
@@ -516,13 +515,315 @@ P {
 
 
 
-
-
-
-
-
-
-/*Laptop view : 1024px*/
+/* Laptop view : 1024px
 @media(min-width:1024px) {
+
+
+} */
+
+
+/*Laptop Large view : 1440px*/
+@media(min-width:1024px) {
+/*start of navbar*/
+.navbar {
+    margin:1.5rem 0;
+}
+
+.navbar-logo {
+    width:calc(60px + 4vw);
+    height: auto;
+    margin-left:2.5rem;
+}
+
+.navbar__items {
+    display:flex;
+    flex-direction: row;
+    color:var(--white-gray);  
+}
+
+.navbar__item {
+    padding:0 1rem;
+} 
+
+.navbar__item:first-of-type {
+    padding-left:0;
+} 
+
+.navbar__item:last-of-type {
+    padding-right:0;
+    margin-right:2.5rem;
+} 
+
+
+/*start of main*/
+.main-content {
+    width:85%;
+    margin:0 auto;
+
+    text-align:center;
+}
+
+.main-content__hero-image {
+    margin:0 auto;
+    width:75%;
+    height:auto;
+}
+
+.main-content--h1 span {
+    display:block;
+}
+
+.main-content--text {
+    width:52ch;   
+}
+/*end of of main*/
+  
+
+/*start of sales-content*/
+.sales-content {
+    /* margin: 9rem 0; */
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    
+}
+
+.sale-content__item {
+    text-align:center;
+    justify-self: center;
+    align-self:center;
+
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content:center;
+}
+
+.sale-content__item-1,
+.sale-content__item-3 {
+    justify-self: end;
+    margin-right:5rem;
+}
+
+.sale-content__item-2,
+.sale-content__item-4 {
+    justify-self: start;
+    margin-left:5rem;
+}
+
+.sales-content__item--heading {
+    font-size: 1.25rem;
+}
+
+.sales-content__item--text {
+    color:var(--white-gray);
+    margin:-0.5rem auto 0 auto;
+    width:47ch;
+    letter-spacing: 0.5px;
+}
+
+.sales-content__img {
+    margin:2rem auto 0.25rem auto;
+    width:50px;
+    height:auto;
+}
+/*end of sales-content*/
+
+
+
+/*start of call-to-action-2*/
+.call-to-action-2 {
+    margin-bottom:12rem;
+    position:relative;
+    left:50%;
+    transform:translateX(-50%);
+    width:50%;
+    display:flex;
+    justify-content: center;
+    overflow:visible;
+}
+
+.call-to-action-2__img {
+    width:65%;
+    margin:0 auto;
+}
+
+.call-to-action-2__content {
+    width:100%;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    
+}
+/*header*/
+.call-to-action-2__content__header {
+    font-size: 2.5rem;
+    margin-bottom:0rem;
+}
+
+.call-to-action-2__content__header span {
+    display:block;
+}
+
+/*text*/
+.call-to-action-2__content__text {
+    line-height:1.6;
+    width: 60ch;
+}
+
+.call-to-action-2__content__text span {
+    display:block;
+    margin-top:1rem;
+}
+
+/*link*/
+.call-to-action-2__content__link {
+    margin-top:0.25rem;
+    position: relative;
+    color:cyan;
+    color:var(--cyan); 
+}
+
+.call-to-action-2__content__link:hover {
+    cursor: pointer;
+}
+
+/*text underline*/
+.call-to-action-2__content__link::before {
+    content:'';
+    position: absolute;
+    width:150px;
+    height:1px;
+    left:0;
+    bottom:-30%;
+    background-color:cyan;
+    background-color:var(--cyan); 
+    
+    transform:scaleX(1);
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
+}
+
+/*arrow icon*/
+.call-to-action-2__content__link::after {
+    content:'';
+    position: absolute;
+    width:150px;
+    height:100%;
+    left:0;
+    top:0;
+    background-image:url("fylo-dark-landing-page-master/images/icon-arrow.svg");
+    background-repeat: no-repeat;
+    background-position: center right;
+}
+/*end of call-to-action-2*/
+
+
+/*start of testimonials*/
+.testimonials {
+    display:flex;
+    justify-content: space-evenly;
+    margin:0 4rem 12rem 4rem;
+    /* margin-bottom:12rem; */
+    position: relative;
+}
+
+.testimonial-container {
+    width:100%;
+    margin:0 25px;
+    background-color:var(--dark-blue-testimonials-1);
+    border-radius:5px;
+    
+    z-index:200;
+}
+
+.testimonial {
+    position: relative;
+    margin:0rem auto;
+    width:80%;
+    background-color:inherit;
+    border-radius:inherit;
+    padding:2.5rem 0;
+
+    z-index:inherit;
+}
+
+.testimonial-1__overlay-quote {
+    position: absolute;
+    width:80%;
+    height:15%;
+    top:-30px;
+    left:5%;
+    transform:translateX(-5%);
+    background-image: url("fylo-dark-landing-page-master/images/bg-quotes.png");
+    background-repeat: no-repeat;
+    background-size: 3.5rem;
+
+    z-index:100;
+}
+
+.testimonial__text {
+    font-size:1rem;
+    width:100%;
+    letter-spacing: 1px;
+    line-height:1.8;
+    color:var(--white-gray);
+}
+
+.testimonial__profile {
+    display:flex;
+    align-items: center;
+}
+/*end of testimonials*/
+
+
+/*start of .get-access*/
+.get-access {
+    background-color:var(--dark-blue-various-1);
+    width:60%;
+    margin:0 auto 4rem auto;
+    padding:1rem 0;
+    border-radius:5px;
+    text-align:center; 
+
+    box-shadow: 0px 5px 35px #111;
+}
+
+.get-access__header {
+    font-size:2rem;
+}
+
+.get-access__text {
+    width:76ch;
+    margin:0 auto 2.5rem auto;
+    color:var(--white-gray);
+}
+
+.get-access__form {
+    display:flex;
+    justify-content: center;
+    width:80%;
+    margin:0 auto;
+}
+
+.get-access__form__text-input {
+    position: relative;
+    left:0;
+    border:none;
+    border-radius:50px;
+    width:75%;
+    height:3.5rem;
+    margin-right:1.5rem;
+    margin-bottom:1.5rem; 
+}
+/*end of .get-access*/
+
+
+/*start of footer*/
+.footer {
+    color:var(--white-dark);
+    padding-bottom:3rem; 
+}
+
 
 }
